--- a/CITATION.bib
+++ b/CITATION.bib
@@ -2,7 +2,8 @@
   title={Adaptive Batch Homomorphic Encryption for Joint Federated Learning in Cross-Device Scenarios},
   author={Han, Junhao and Yan, Li},
   journal={IEEE Internet of Things Journal},
-  volume={Early Access},
+  volume={11},
+  number={6},
+  pages={9338--9354},
   year={2023},
-  publisher={IEEE}
 }
